Changed colors but need to make a new header

--- a/mainScreens/lunchSpecials.html
+++ b/mainScreens/lunchSpecials.html
@@ -19,7 +19,7 @@
             margin-top: 0in;
             margin-bottom: .0001pt;
             padding: 0in;
-            color: #CBA34C;
+            color: #F0C808;
         }
         p.Item
             {
@@ -49,7 +49,7 @@
     <base target="_self" />
 </head>
 
-<body style="background-image: url('red29.jpg')">
+<body style="background-color: #B51716">
 
     <div class="WordSection1">
         <div style="border-width: medium medium 1pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 0in 1pt; mso-element: para-border-div; mso-border-bottom-alt: solid windowtext .5pt;">
