--- a/nav.html
+++ b/nav.html
@@ -32,7 +32,7 @@ a:hover {
 </style>
 </head>
 
-<body style="background-color: #611F29">
+<body style="background-color: #911B1B">
 
     <p class="auto-style1">
         <a href="mainScreens/appetizers.html" target="main">
