--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
 <title>Thai, Chinese, Vietnamese, Sushi Restaurant Scottsdale Phoenix</title>
+<link href="style.css" rel="stylesheet" />
 </head>
 
 <frameset rows="129,*">
@@ -11,7 +12,7 @@
 		<frame name="main" src="mainScreens/lunchSpecials.html" target="_self">
 	</frameset>
 	<noframes>
-	<body style="margin: 4; border-color: #C22E37">
+	<body style="margin: 4; border-color: #911B1B">
 
 	<p>This page uses frames, but your browser doesn't support them.</p>
 
