made logo for spicy foods

--- a/mainScreens/lunchSpecials.html
+++ b/mainScreens/lunchSpecials.html
@@ -64,22 +64,22 @@
     <o:p>Dine-In Lunch Specials Include Egg<span style="mso-spacerun:yes">&nbsp;
     </span>Drop or Hot &amp; Sour Soup</o:p></p>
     <p class="Item" style="color: #CBA34C">&nbsp;</p>
-    <p class="Item" style="tab-stops: right dotted 4.0in;">Pad Thai Chicken Δ</p>
+    <p class="Item" style="tab-stops: right dotted 4.0in;">Pad Thai Chicken <img src="redfire.png" height="10px" width="10px"/></p>
     <p class="Item">Panang<span style="mso-spacerun:yes">&nbsp; </span>or Kang Keo 
-    Wan Chicken Δ</p>
-    <p class="Item">Pad Kra Pao Chicken Δ</p>
-    <p class="Item">Kung Pao Chicken Δ</p>
+    Wan Chicken <img src="redfire.png" height="10px" width="10px"/></p>
+    <p class="Item">Pad Kra Pao Chicken <img src="redfire.png" height="10px" width="10px"/></p>
+    <p class="Item">Kung Pao Chicken <img src="redfire.png" height="10px" width="10px"/></p>
     <p class="Item">Chicken Chop Suey</p>
     <p class="Item">Chicken, Beef or Pork with Vegetables</p>
     <p class="Item">Chicken with Cashews</p>
     <p class="Item">Chicken with Black Bean Sauce</p>
-    <p class="Item">Sliced Chicken with Garlic Sauce Δ</p>
+    <p class="Item">Sliced Chicken with Garlic Sauce <img src="redfire.png" height="10px" width="10px"/></p>
     <p class="Item" style="color: #CBA34C">&nbsp;</p>
     <p class="Item" style="tab-stops: right dotted 4.0in;">Pad Thai Beef Δ</p>
     <p class="Item">Panang<span style="mso-spacerun:yes">&nbsp; </span>or Kang Keo 
     Wan Beef Δ</p>
-    <p class="Item">Pad Kra Pao Beef Δ</p>
-    <p class="Item">Kung Pao Beef Δ</p>
+    <p class="Item">Pad Kra Pao Beef <img src="redfire.png" height="10px" width="10px"/></p>
+    <p class="Item">Kung Pao Beef <img src="redfire.png" height="10px" width="10px"/></p>
     <p class="Item">Beef with Broccoli</p>
     <p class="Item">Beef Chop Suey</p>
     <p class="Item" style="color: #CBA34C">&nbsp;</p>
