Changes from thursday

--- a/mainScreens/lunchSpecials.html
+++ b/mainScreens/lunchSpecials.html
@@ -4,48 +4,7 @@
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <title>House-Crafted Desserts</title>
-    <style type="text/css">
-        div.WordSection1
-            {page:WordSection1;}
-        .auto-style1 {
-            text-align: left;
-            font-size: 20.0pt;
-            font-family: Papyrus;
-            border-style: none;
-            border-color: inherit;
-            border-width: medium;
-            margin-left: 0in;
-            margin-right: 0in;
-            margin-top: 0in;
-            margin-bottom: .0001pt;
-            padding: 0in;
-            color: #F0C808;
-        }
-        p.Item
-            {
-            margin-top: 8.0pt;
-            margin-right: 0in;
-            margin-bottom: 0in;
-            margin-left: 0in;
-            margin-bottom: .0001pt;
-            line-height: 12.0pt;
-            page-break-after: avoid;
-            tab-stops: 27.0pt right 3.25in;
-            font-size: 12.0pt;
-            font-family: Papyrus;
-            font-weight: bold;
-            color: #CDA551;
-        }
-        p.ItemDescription
-            {margin-bottom:.0001pt;
-            text-align:justify;
-            font-size:10.0pt;
-            font-family:"Arial Narrow","sans-serif";
-            margin-left: 0in;
-            margin-right: 0in;
-            margin-top: 0in;
-        }
-    </style>
+    <link href="style.css" rel="stylesheet"/>
     <base target="_self" />
 </head>
 
