--- a/menu.html
+++ b/menu.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
+
 <head>
+    <link href="mainstyle.css" rel="stylesheet">
     <meta content="en-us" http-equiv="Content-Language" />
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <title></title>
@@ -21,10 +23,15 @@
     <base target="_self" />
 </head>
 
-<body style="margin: 4px; background-color: #4E0C16; border-color: #C52D37">
+<body style="margin: 4px; background-color: white; border-color: white">
+    <section id="flow">
+        <img src="tree.jpg" width="120px" height="130px"/>
 
-    <p class="auto-style1" style="height: 112px; border: thick #C52D37 none">&nbsp;s<img alt="" class="auto-style2" height="100" src="Header_Red.jpg" width="600" />&nbsp; </p>
+        <p class="auto-style1" style="height: 112px; border: thick #C52D37 none">Tottie's Asian Fusion #1<br /> 
+        At Thomas and Hayden (480)-970-0633</p>
+
+    </section>
+
 
 </body>
-
 </html>
