--- a/nav.html
+++ b/nav.html
@@ -2,38 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+    <link href="nav.css" rel="stylesheet" />
 <meta content="en-us" http-equiv="Content-Language" />
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <title></title>
 <base target="main" />
-<style type="text/css">
-.auto-style1 {
-	font-family: Ebrima;
-	font-size: small;
-	text-decoration: none;
-}
-.auto-style2 {
-	color: #CDA551;
-	text-decoration: none;
-}
-a {
-	color: #CDA551;
-	text-decoration: none;
-}
-a:visited {
-	color: #CDA551;
-}
-a:active {
-	color: #CDA551;
-}
-a:hover {
-	color: #CDA551;
-}
-</style>
+
 </head>
 
 <body style="background-color: #911B1B">
-
+    <nav>
     <p class="auto-style1">
         <a href="mainScreens/appetizers.html" target="main">
             <strong><span class="auto-style2">Appetizers</span></strong>
@@ -79,6 +57,7 @@ a:hover {
             <a href="mainScreens/lunchSpecials.html">Lunch Specials</a>
         </strong>
     </p>
+    </nav>
 
 </body>
 
