Fixed each pages styles

--- a/mainScreens/chinese.html
+++ b/mainScreens/chinese.html
@@ -20,7 +20,7 @@ div.WordSection1
 	margin-top: 4.0pt;
 	margin-bottom: .0001pt;
 	padding: 0in;
-	color: #CDA551;
+	color: #F0C808;
 }
 .auto-style2 {
 	line-height: 12.0pt;
@@ -46,11 +46,14 @@ div.WordSection1
 .auto-style5 {
 	color: #CDA551;
 }
+p{
+	padding: 10px 0px;
+}
 </style>
 <base target="_self" />
 </head>
 
-<body style="background-image: url('red29.jpg')">
+<body style="background-color: #B51716">
 
 <div class="WordSection1">
 	<div style="border-width: medium medium 1pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 0in 1pt; mso-element: para-border-div; mso-border-bottom-alt: solid windowtext .5pt;">
