--- a/mainScreens/noodles.html
+++ b/mainScreens/noodles.html
@@ -19,7 +19,7 @@ div.WordSection1
 	margin-top: 0in;
 	margin-bottom: .0001pt;
 	padding: 0in;
-	color: #CCA352;
+	color: #F0C808;
 }
 p.Item
 	{margin-top:8.0pt;
@@ -45,6 +45,7 @@ p.ItemL23Prices
 	font-size:10.0pt;
 	font-family:Papyrus;
 	font-weight:bold;
+	color: black;
 	}
 p.ItemDescription
 	{margin-bottom:.0001pt;
@@ -55,11 +56,14 @@ p.ItemDescription
 	margin-right: 0in;
 	margin-top: 0in;
 }
+p{
+	padding: 5px 0px;
+}
 </style>
 <base target="_self" />
 </head>
 
-<body style="background-image: url('red29.jpg')">
+<body style="background-color: #B51716">
 
     <div class="WordSection1">
         <div style="border-width: medium medium 1pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 0in 1pt; mso-element: para-border-div; mso-border-bottom-alt: solid windowtext .5pt;">
@@ -67,24 +71,24 @@ p.ItemDescription
             Noodles<o:p></o:p></p>
         </div>
     </div>
-    <p class="Item" style="color: #CCA352">Chow Mein</p>
-    <p class="ItemL23Prices" style="color: #CCA352">Chicken, Beef, Pork, Shrimp, Vegetable or</p>
-    <p class="ItemL23Prices" style="color: #CCA352">House Special (Chicken, Beef and Shrimp)</p>
-    <p class="Item" style="color: #CCA352">Chow Fun</p>
-    <p class="ItemL23Prices" style="color: #CCA352">Chicken, Beef, Shrimp, or</p>
-    <p class="ItemL23Prices" style="color: #CCA352">House Special (Chicken, Beef and Shrimp)</p>
-    <p class="Item" style="color: #CCA352">Tottie’s Pan Fried Noodles</p>
-    <p class="ItemDescription" style="color: #CCA352">Egg noodles pan fried until crispy; smothered with 
+    <p class="Item" style="color: #DDA83E">Chow Mein</p>
+    <p class="ItemL23Prices" >Chicken, Beef, Pork, Shrimp, Vegetable or</p>
+    <p class="ItemL23Prices">House Special (Chicken, Beef and Shrimp)</p>
+    <p class="Item" style="color: #DDA83E">Chow Fun</p>
+    <p class="ItemL23Prices">Chicken, Beef, Shrimp, or</p>
+    <p class="ItemL23Prices">House Special (Chicken, Beef and Shrimp)</p>
+    <p class="Item" style="color: #DDA83E">Tottie’s Pan Fried Noodles</p>
+    <p class="ItemDescription" style="color: black">Egg noodles pan fried until crispy; smothered with 
     shrimp, chicken, beef, broccoli, mushrooms, snow peas and brown sauce.<o:p></o:p></p>
-    <p class="Item" style="color: #CCA352">Seafood Pan Fried Noodles</p>
-    <p class="ItemDescription" style="color: #CCA352">Egg noodles pan fried until crispy; with scallops, 
+    <p class="Item" style="color: #DDA83E">Seafood Pan Fried Noodles</p>
+    <p class="ItemDescription" style="color: black">Egg noodles pan fried until crispy; with scallops, 
     white fish, shrimp and mixed vegetables.<o:p></o:p></p>
-    <p class="Item" style="color: #CCA352">Pork Pan Fried Noodles</p>
-    <p class="ItemDescription" style="color: #CCA352">Egg noodles pan fried until crispy; with pork, 
+    <p class="Item" style="color: #DDA83E">Pork Pan Fried Noodles</p>
+    <p class="ItemDescription" style="color: black">Egg noodles pan fried until crispy; with pork, 
     shiitake mushrooms and napa cabbage.<o:p></o:p></p>
-    <p class="Item" style="font-weight: normal; color: #CCA352"><st1:place w:st="on"><st1:country-region w:st="on">Singapore</st1:country-region></st1:place> 
+    <p class="Item" style="font-weight: normal; color: #DDA83E"><st1:place w:st="on"><st1:country-region w:st="on">Singapore</st1:country-region></st1:place> 
     Rice Noodles</p>
-    <p class="ItemDescription" style="color: #CCA352">Thin rice noodles with pork and shrimp stir-fried 
+    <p class="ItemDescription" style="color: black">Thin rice noodles with pork and shrimp stir-fried 
     with a light curry sauce.</p>
 
 </body>
