--- a/mainScreens/rice.html
+++ b/mainScreens/rice.html
@@ -19,7 +19,7 @@
             margin-top: 4.0pt;
             margin-bottom: .0001pt;
             padding: 0in;
-            color: #CCA551;
+            color: #F0C808;
         }
         p.Item
             {margin-top:8.0pt;
@@ -33,6 +33,8 @@
             font-size:12.0pt;
             font-family:Papyrus;
             font-weight:bold;
+            padding-top: 15px;
+
             }
         p.ItemDescription
             {margin-bottom:.0001pt;
@@ -51,6 +53,8 @@
             margin-right: 0in;
             margin-top: 8.0pt;
             margin-bottom: .0001pt;
+            padding-top: 15px;
+
         }
         p.ItemL2
             {margin-top:2.0pt;
@@ -74,6 +78,8 @@
             margin-top: 8.0pt;
             margin-bottom: .0001pt;
             color: #CCA551;
+            padding-top: 15px;
+
         }
         .auto-style5 {
             color: #CCA551;
@@ -82,7 +88,7 @@
     <base target="_self" />
 </head>
 
-<body style="background-image: url('red29.jpg')">
+<body style="background-color: #B51716">
 
     <div class="WordSection1">
         <div style="border-width: medium medium 1pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 0in 1pt; mso-element: para-border-div; mso-border-bottom-alt: solid windowtext .5pt;">
@@ -90,7 +96,7 @@
         </div>
     </div>
     <p class="Item" style="color: #CCA551">Tottie’s Fried Rice</p>
-    <p class="ItemDescription" style="color: #CCA551">Combination of shrimp, chicken and beef<o:p></o:p></p>
+    <p class="ItemDescription" style="color: black">Combination of shrimp, chicken and beef<o:p></o:p></p>
     <p class="auto-style4" style="tab-stops: 27.0pt right 3.25in;">Shrimp Fried Rice</p>
     <p class="auto-style4" style="tab-stops: 27.0pt right 3.25in;">Beef Fried Rice</p>
     <p class="auto-style2" style="tab-stops: 27.0pt right 3.25in;">
@@ -102,9 +108,9 @@
     <p class="auto-style4" style="tab-stops: 27.0pt right 3.25in;">Egg Fried Rice</p>
     <p class="Item"><span class="auto-style5">Thai Fried Rice</span><span style="mso-tab-count: 1;" class="auto-style5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </span><o:p></o:p></p>
-    <p class="ItemL2" style="color: #CCA551">Chicken, Pork or Beef</p>
-    <p class="ItemL2" style="color: #CCA551">Shrimp</p>
-    <p class="ItemDescription" style="color: #CCA551">Seasoned with Thai basil.<o:p></o:p></p>
+    <p class="ItemL2" style="color: #CCA551">-Chicken, Pork or Beef</p>
+    <p class="ItemL2" style="color: #CCA551">-Shrimp</p>
+    <p class="ItemDescription" style="color: black">Seasoned with Thai basil.<o:p></o:p></p>
     <p class="auto-style4" style="tab-stops: 27.0pt right 3.25in;">Steamed Brown 
     Rice</p>
 
