--- a/mainScreens/soups.html
+++ b/mainScreens/soups.html
@@ -19,7 +19,7 @@ div.WordSection1
 	margin-top: 0in;
 	margin-bottom: .0001pt;
 	padding: 0in;
-	color: #CDA551;
+	color: #F0C808;
 }
 p.Item
 	{margin-top:8.0pt;
@@ -33,6 +33,7 @@ p.Item
 	font-size:12.0pt;
 	font-family:Papyrus;
 	font-weight:bold;
+	padding-top: 15px;
 	}
 p.ItemDescription
 	{margin-bottom:.0001pt;
@@ -72,7 +73,7 @@ p.ItemL23Prices
 <base target="_self" />
 </head>
 
-<body style="background-image: url('red29.jpg')">
+<body style="background-color: #B51716">
 
 <div class="WordSection1">
 	<div style="border-width: medium medium 1pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 0in 1pt; mso-element: para-border-div; mso-border-bottom-alt: solid windowtext .5pt;">
@@ -87,30 +88,30 @@ p.ItemL23Prices
 <p class="Item" style="color: #CDA551">Chicken Corn Soup</p>
 <p class="Item" style="color: #CDA551">Spicy Seafood Noodle Soup
 &Delta;</p>
-<p class="ItemDescription" style="color: #CDA551">Mussels, fish, shrimp, scallops and vegetables with 
+<p class="ItemDescription" style="color: black">Mussels, fish, shrimp, scallops and vegetables with 
 rice noodles.<o:p></o:p></p>
 <p class="Item"><span class="auto-style5">Tom Yum
 </span>
 <span style="mso-tab-count: 1;" class="auto-style5">&Delta;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span><o:p></o:p></p>
-<p class="ItemDescription" style="color: #CDA551">Classic Thai soup made with lemon grass and Thai 
+<p class="ItemDescription" style="color: black">Classic Thai soup made with lemon grass and Thai 
 herbs.<o:p></o:p></p>
-<p class="auto-style4" style="tab-stops: right 150.0pt 3.25in;">Chicken</p>
-<p class="auto-style4" style="tab-stops: right 150.0pt 3.25in;">Shrimp</p>
-<p class="ItemL23Prices"><span class="auto-style5">Seafood (scallops, white fish, mussels &amp; shrimp)</span><span style="mso-tab-count: 1;" class="auto-style5">
+<p class="auto-style4" style="tab-stops: right 150.0pt 3.25in;">-Chicken</p>
+<p class="auto-style4" style="tab-stops: right 150.0pt 3.25in;">-Shrimp</p>
+<p class="ItemL23Prices"><span class="auto-style5">-Seafood (scallops, white fish, mussels &amp; shrimp)</span><span style="mso-tab-count: 1;" class="auto-style5">
 </span></p>
 <p class="Item" style="color: #CDA551">Tom Kha Gai
 &Delta;</p>
-<p class="ItemDescription" style="color: #CDA551">Thai herbs in coconut milk broth.<o:p></o:p></p>
-<p class="auto-style4" style="tab-stops: right 150.0pt 3.25in;">Chicken</p>
-<p class="auto-style4" style="tab-stops: right 150.0pt 3.25in;">Shrimp</p>
+<p class="ItemDescription" style="color: black">Thai herbs in coconut milk broth.<o:p></o:p></p>
+<p class="auto-style4" style="tab-stops: right 150.0pt 3.25in;">-Chicken</p>
+<p class="auto-style4" style="tab-stops: right 150.0pt 3.25in;">-Shrimp</p>
 <p class="ItemL23Prices"><span class="auto-style5">Seafood (scallops, white fish, mussels &amp; shrimp)</span><span style="mso-tab-count: 1;" class="auto-style5">
 </span></p>
 <p class="Item" style="color: #CDA551">Pho</p>
-<p class="ItemDescription" style="color: #CDA551">Vietnamese rice noodle soup.<o:p></o:p></p>
-<p class="auto-style4" style="tab-stops: right 150.0pt 3.25in;">Tai (beef) </p>
-<p class="auto-style4" style="tab-stops: right 150.0pt 3.25in;">Ga (chicken)</p>
-<p class="auto-style4" style="tab-stops: right 150.0pt 3.25in;">Tai Bo Vien 
+<p class="ItemDescription" style="color: black">Vietnamese rice noodle soup.<o:p></o:p></p>
+<p class="auto-style4" style="tab-stops: right 150.0pt 3.25in;">-Tai (beef) </p>
+<p class="auto-style4" style="tab-stops: right 150.0pt 3.25in;">-Ga (chicken)</p>
+<p class="auto-style4" style="tab-stops: right 150.0pt 3.25in;">-Tai Bo Vien 
 (beef with meatballs)</p>
 
 </body>
