--- a/mainScreens/veggies.html
+++ b/mainScreens/veggies.html
@@ -20,7 +20,7 @@
             margin-top: 4.0pt;
             margin-bottom: .0001pt;
             padding: 0in;
-            color: #CFA751;
+            color: #F0C808;
         }
         .auto-style2 {
             line-height: 12.0pt;
@@ -46,35 +46,38 @@
             margin-bottom: .0001pt;
             color: #CFA751;
         }
+        p{
+            padding: 10px 0px;
+        }
     </style>
     <base target="_self" />
 </head>
 
-<body style="background-image: url('red29.jpg')">
+<body style="background-color: #B51716">
 
     <div class="WordSection1">
         <div style="border-width: medium medium 1pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 0in 1pt; mso-element: para-border-div; mso-border-bottom-alt: solid windowtext .5pt;">
             <p class="auto-style3" style="page-break-after: avoid;">Vegetables<o:p></o:p></p>
         </div>
     </div>
-    <p class="auto-style5" style="tab-stops: 27.0pt right 3.25in;">Mixed Steamed 
+    <p class="auto-style5" style="tab-stops: 27.0pt right 3.25in;">-Mixed Steamed 
     Vegetables</p>
-    <p class="auto-style5" style="tab-stops: 27.0pt right 3.25in;">Vegetable Chop 
+    <p class="auto-style5" style="tab-stops: 27.0pt right 3.25in;">-Vegetable Chop 
     Suey</p>
     <p class="auto-style5" style="tab-stops: 27.0pt right 3.25in; mso-font-width: 90%;">
-    String Beans with Brown Sauce</p>
-    <p class="auto-style5" style="tab-stops: 27.0pt right 3.25in;">Hot and Spicy 
+    -String Beans with Brown Sauce</p>
+    <p class="auto-style5" style="tab-stops: 27.0pt right 3.25in;">-Hot and Spicy 
     Eggplant Δ</p>
-    <p class="auto-style5" style="tab-stops: 27.0pt right 3.25in;">Home Style Bean 
+    <p class="auto-style5" style="tab-stops: 27.0pt right 3.25in;">-Home Style Bean 
     Curd</p>
     <p class="auto-style2" style="tab-stops: 27.0pt right 3.25in;">
     <span class="auto-style4"><st1:place w:st="on"> 
-    Szechwan</st1:place> Style Bean Curd</span><span style="mso-font-width: 90%;" class="auto-style4"> Δ</span></p>
-    <p class="auto-style5" style="tab-stops: 27.0pt right 3.25in;">Vegetable Moo Shu</p>
-    <p class="auto-style5" style="tab-stops: 27.0pt right 3.25in;">Vegetable Egg Fu 
+    -Szechwan</st1:place> Style Bean Curd</span><span style="mso-font-width: 90%;" class="auto-style4"> Δ</span></p>
+    <p class="auto-style5" style="tab-stops: 27.0pt right 3.25in;">-Vegetable Moo Shu</p>
+    <p class="auto-style5" style="tab-stops: 27.0pt right 3.25in;">-Vegetable Egg Fu 
     Yong</p>
     <p class="auto-style2" style="tab-stops: 27.0pt right 3.25in;">
-    <span class="auto-style4">Sautéed Baby Bok 
+    <span class="auto-style4">-Sautéed Baby Bok 
     Choy</span><span style="mso-tab-count: 1;" class="auto-style4"> </span></p>
 
 </body>
