--- a/mainScreens/appetizers.html
+++ b/mainScreens/appetizers.html
@@ -7,6 +7,7 @@
 <style type="text/css">
 div.WordSection1
 	{page:WordSection1;}
+
 .auto-style1 {
 	text-align: left;
 	font-size: 20.0pt;
@@ -19,7 +20,7 @@ div.WordSection1
 	margin-top: 0in;
 	margin-bottom: .0001pt;
 	padding: 0in;
-	color: #CDA551;
+	color: #F0C808;
 }
 p.Item
 	{margin-top:8.0pt;
@@ -33,6 +34,7 @@ p.Item
 	font-size:12.0pt;
 	font-family:Papyrus;
 	font-weight:bold;
+	padding-top: 15px;
 	}
 p.ItemDescription
 	{margin-bottom:.0001pt;
@@ -42,6 +44,7 @@ p.ItemDescription
 	margin-left: 0in;
 	margin-right: 0in;
 	margin-top: 0in;
+	color: black;
 }
 p.ItemL23Prices
 	{margin-top:2.0pt;
@@ -74,14 +77,12 @@ p.ItemL23Prices
 	margin-bottom: .0001pt;
 	color: #CDA551;
 }
-.auto-style4 {
-	color: #CDA551;
-}
+
 </style>
 <base target="_self" />
 </head>
 
-<body style="background-image: url('red29.jpg')">
+<body style="background-color: #B51716">
 
 <div class="WordSection1">
 	<div style="border-width: medium medium 1pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 0in 1pt; mso-element: para-border-div; mso-border-bottom-alt: solid windowtext .5pt;">
@@ -90,51 +91,51 @@ p.ItemL23Prices
 	</div>
 </div>
 <p class="Item" style="color: #CDA551">Combination Plate</p>
-<p class="ItemDescription" style="mso-pagination: none; color: #CDA551;">Paper wrapped chicken 
+<p class="ItemDescription" style="mso-pagination: none; color: black;">Paper wrapped chicken 
 (2), BBQ ribs (2), skewered beef (2), egg rolls (2), fried wonton (4), and fried 
 shrimp (2)<o:p></o:p></p>
 <p class="Item" style="color: #CDA551">Egg Rolls (4) </p>
-<p class="ItemDescription" style="color: #CDA551">Crispy and filled with carrots and cabbage.</p>
+<p class="ItemDescription" style="color: black">Crispy and filled with carrots and cabbage.</p>
 <p class="Item" style="color: #CDA551">Tottie Rolls (4)</p>
-<p class="ItemDescription" style="mso-pagination: none; color: #CDA551;">Vietnamese style egg 
+<p class="ItemDescription" style="mso-pagination: none; color: black;">Vietnamese style egg 
 rolls. A real treat wrapped in cool lettuce.<o:p></o:p></p>
 <p class="Item" style="color: #CDA551">Shanghai Egg Rolls (4)</p>
-<p class="ItemDescription" style="mso-pagination: none; color: #CDA551;">Filled with pork, 
+<p class="ItemDescription" style="mso-pagination: none; color: black;">Filled with pork, 
 shiitake mushrooms and napa cabbage.<o:p></o:p></p>
 <p class="Item" style="color: #CDA551">Spring Rolls (4)</p>
 <p class="ItemDescription" style="mso-pagination: none;">
 <span class="auto-style4">Vietnamese Goi Cuon: 
 Soft rice paper rolls with bean sprouts, herbs and rice vermicelli.</span><span style="mso-spacerun: yes;" class="auto-style4">&nbsp;
 </span><span class="auto-style4">Served wiith peanut sauce.</span><o:p></o:p></p>
-<p class="ItemL23Prices" style="color: #CDA551">Traditional (pork &amp; shrimp)</p>
-<p class="ItemL23Prices" style="color: #CDA551">Salmon</p>
-<p class="ItemL23Prices" style="color: #CDA551">Shrimp Tempura </p>
-<p class="ItemL23Prices" style="color: #CDA551">Soft Shell Crab</p>
-<p class="ItemL23Prices" style="color: #CDA551">Vegetarian</p>
+<p class="ItemL23Prices" style="color: #CDA551">-Traditional (pork &amp; shrimp)</p>
+<p class="ItemL23Prices" style="color: #CDA551">-Salmon</p>
+<p class="ItemL23Prices" style="color: #CDA551">-Shrimp Tempura </p>
+<p class="ItemL23Prices" style="color: #CDA551">-Soft Shell Crab</p>
+<p class="ItemL23Prices" style="color: #CDA551">-Vegetarian</p>
 <p class="Item" style="color: #CDA551">Sugarcane Chicken</p>
-<p class="ItemDescription" style="color: #CDA551">Chicken meatballs skewered on sugarcane and served 
+<p class="ItemDescription" style="color: black">Chicken meatballs skewered on sugarcane and served 
 with cilantro, mint, cucumber, and rice vermicelli. Wrap it all in cool lettuce 
 and dip in peanut sauce.<o:p></o:p></p>
 <p class="auto-style3" style="mso-pagination: none; tab-stops: 27.0pt right 3.25in;">
 Beef on Skewers (4)</p>
 <p class="Item" style="color: #CDA551">Chicken Satay Sticks (2)</p>
-<p class="ItemDescription" style="color: #CDA551">Marinated chicken on a bamboo skewer, served with 
+<p class="ItemDescription" style="color: black">Marinated chicken on a bamboo skewer, served with 
 peanut sauce.<o:p></o:p></p>
 <p class="Item" style="color: #CDA551">Soft Shell Crab with Ponzu Sauce</p>
 <p class="Item" style="color: #CDA551">Edamame</p>
 <p class="auto-style2" style="mso-pagination: none; tab-stops: 27.0pt right 3.25in;">
-<span class="auto-style4">Shrimp Puffs (6)</span><span style="mso-tab-count: 1;" class="auto-style4"> </span></p>
+<span class="auto-style4" style="color: #CDA551">Shrimp Puffs (6)</span><span style="mso-tab-count: 1;" class="auto-style4"> </span></p>
 <p class="auto-style3" style="mso-pagination: none; tab-stops: 27.0pt right 3.25in;">
 BBQ Pork Ribs (4)</p>
 <p class="auto-style2" style="mso-pagination: none; tab-stops: 27.0pt right 3.25in;">
-<span class="auto-style4">Fried Wonton (10)</span><span style="mso-tab-count: 1;" class="auto-style4"> </span></p>
+<span class="auto-style4" style="color: #CDA551">Fried Wonton (10)</span><span style="mso-tab-count: 1;" class="auto-style4"> </span></p>
 <p class="Item" style="color: #CDA551">Fried Tofu (8)</p>
-<p class="ItemDescription" style="color: #CDA551">Fried tofu wedges served with peanut or cucumber 
+<p class="ItemDescription" style="color: black">Fried tofu wedges served with peanut or cucumber 
 sauce.<o:p></o:p></p>
-<p class="Item"><span class="auto-style4">Potstickers</span><span style="mso-spacerun: yes;" class="auto-style4"> </span>
-<span class="auto-style4">(5)</span></p>
+<p class="Item"><span class="auto-style4" style="color: #CDA551">Potstickers</span><span style="mso-spacerun: yes;" class="auto-style4" > </span>
+<span class="auto-style4" style="color: #CDA551">(5)</span></p>
 <p class="auto-style2" style="mso-pagination: none; tab-stops: 27.0pt right 3.25in;">
-<span class="auto-style4">Spicy Cucumber</span><span style="mso-tab-count: 1;" class="auto-style4"> </span></p>
+<span class="auto-style4" style="color: #CDA551">Spicy Cucumber</span><span style="mso-tab-count: 1;" class="auto-style4"> </span></p>
 
 </body>
 
