--- a/mainScreens/desserts.html
+++ b/mainScreens/desserts.html
@@ -19,7 +19,7 @@
             margin-top: 0in;
             margin-bottom: .0001pt;
             padding: 0in;
-            color: #CBA34C;
+            color: #F0C808;
         }
         p.Item
             {margin-top:8.0pt;
@@ -33,6 +33,8 @@
             font-size:12.0pt;
             font-family:Papyrus;
             font-weight:bold;
+            padding-top: 15px;
+
             }
         p.ItemDescription
             {margin-bottom:.0001pt;
@@ -50,7 +52,7 @@
     <base target="_self" />
 </head>
 
-<body style="background-image: url('red29.jpg')">
+<body style="background-color: #B51716">
 
     <div class="WordSection1">
         <div style="border-width: medium medium 1pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 0in 1pt; mso-element: para-border-div; mso-border-bottom-alt: solid windowtext .5pt;">
@@ -59,13 +61,13 @@
         </div>
     </div>
     <p class="Item" style="color: #CBA34C">Fried Honey Banana (4)</p>
-    <p class="ItemDescription" style="color: #CBA34C">Served with homemade coconut ice cream.<o:p></o:p></p>
+    <p class="ItemDescription" style="color: black">Served with homemade coconut ice cream.<o:p></o:p></p>
     <p class="Item" style="mso-font-width: 90%; color: #CBA34C;">Homemade Ice Cream</p>
-    <p class="ItemDescription" style="color: #CBA34C">Ask your server for available flavors.<o:p></o:p></p>
+    <p class="ItemDescription" style="color: black">Ask your server for available flavors.<o:p></o:p></p>
     <p class="Item"><span class="auto-style2">Homemade Ice Cream Sampler</span><span style="mso-tab-count: 1;" class="auto-style2">&nbsp;</span></p>
-    <p class="ItemDescription" style="color: #CBA34C">Can’t decide on a flavor? Try the sampler!<o:p></o:p></p>
+    <p class="ItemDescription" style="color: black">Can’t decide on a flavor? Try the sampler!<o:p></o:p></p>
     <p class="Item" style="color: #CBA34C">Mango with Sticky Rice</p>
-    <p class="ItemDescription" style="color: #CBA34C">Sticky rice topped with sliced mango and sweetened 
+    <p class="ItemDescription" style="color: black">Sticky rice topped with sliced mango and sweetened 
     coconut milk</p>
 
 </body>
