--- a/mainScreens/thai.html
+++ b/mainScreens/thai.html
@@ -19,7 +19,7 @@ div.WordSection1
 	margin-top: 0in;
 	margin-bottom: .0001pt;
 	padding: 0in;
-	color: #CDA551;
+	color: #F0C808;
 }
 p.Item
 	{margin-top:8.0pt;
@@ -33,6 +33,7 @@ p.Item
 	font-size:12.0pt;
 	font-family:Papyrus;
 	font-weight:bold;
+	padding-top: 15px;
 	}
 p.ItemDescription
 	{margin-bottom:.0001pt;
@@ -77,7 +78,7 @@ p.ItemL23Prices
 	margin-top: 0in;
 	margin-bottom: .0001pt;
 	letter-spacing: -0.7pt;
-	color: #CDA551;
+	color: black;
 }
 .auto-style4 {
 	line-height: 11.0pt;
@@ -108,13 +109,13 @@ p.ItemL23Prices
 	margin-right: 0in;
 	margin-top: 0in;
 	margin-bottom: .0001pt;
-	color: #CDA551;
+	color: black;
 }
 </style>
 <base target="_self" />
 </head>
 
-<body style="background-image: url('red29.jpg')">
+<body style="background-color: #B51716">
 
 <div class="WordSection1">
 	<div style="border-width: medium medium 1pt; border-style: none none solid; border-color: currentColor currentColor windowtext; padding: 0in 0in 1pt; mso-element: para-border-div; mso-border-bottom-alt: solid windowtext .5pt;">
@@ -123,7 +124,7 @@ p.ItemL23Prices
 </div>
 <p class="Item" style="color: #CDA551">Larb
 &Delta;</p>
-<p class="ItemDescription" style="color: #CDA551">Spicy minced meat salad with fresh mint and Thai 
+<p class="ItemDescription" style="color: black">Spicy minced meat salad with fresh mint and Thai 
 herbs.</p>
 <p class="ItemL2" style="color: #CDA551">Tofu<o:p></o:p></p>
 <p class="ItemL2"><span class="auto-style9">Chicken (Gai) or Beef (Nua)</span><span style="mso-tab-count: 1;" class="auto-style9">
@@ -132,25 +133,25 @@ herbs.</p>
 </p>
 <p class="Item"><span class="auto-style9">Cucumber Chicken Salad</span><span style="mso-tab-count: 1;" class="auto-style9"> </span>
 </p>
-<p class="ItemDescription" style="color: #CDA551">Chicken and cool cucumber seasoned with mint, ginger 
+<p class="ItemDescription" style="color: black">Chicken and cool cucumber seasoned with mint, ginger 
 and lemon. Topped with crispy rice noodles.<o:p></o:p></p>
 <p class="Item" style="color: #CDA551">Bun Tom </p>
-<p class="ItemDescription" style="color: #CDA551">Charbroiled pork, shrimp and Tottie rolls with fresh 
+<p class="ItemDescription" style="color: black">Charbroiled pork, shrimp and Tottie rolls with fresh 
 lettuce, fresh mint, peanuts and rice vermicelli.<o:p></o:p></p>
 <p class="Item" style="color: #CDA551">Papaya Salad Platter
 Δ</p>
-<p class="ItemDescription" style="color: #CDA551">Green papaya salad with Thai grilled chicken and 
+<p class="ItemDescription" style="color: black">Green papaya salad with Thai grilled chicken and 
 sticky rice.<o:p></o:p></p>
 <p class="Item" style="color: #CDA551">Pad Thai
 Δ</p>
-<p class="ItemDescription" style="color: #CDA551">Traditional Thai stir fried rice noodles.<o:p></o:p></p>
+<p class="ItemDescription" style="color: black">Traditional Thai stir fried rice noodles.<o:p></o:p></p>
 <p class="ItemL23Prices" style="color: #CDA551">Chicken, Beef or Shrimp</p>
 <p class="Item" style="color: #CDA551">Panang
 Δ</p>
-<p class="ItemDescription" style="color: #CDA551">Spicy Thai curry with your choice of the following:<o:p></o:p></p>
+<p class="ItemDescription" style="color: black">Spicy Thai curry with your choice of the following:<o:p></o:p></p>
 <p class="ItemL23Prices" style="color: #CDA551">Chicken, Beef, Shrimp or Fish</p>
 <p class="Item" style="color: #CDA551">Kang Keo WanΔ</p>
-<p class="ItemDescription" style="color: #CDA551">Spicy Thai green curry with your choice of the 
+<p class="ItemDescription" style="color: black">Spicy Thai green curry with your choice of the 
 following:<o:p></o:p></p>
 <p class="ItemL23Prices" style="color: #CDA551">Chicken, Beef, Shrimp, Fish or Mussels</p>
 <p class="Item" style="color: #CDA551">Pad Kra Pao
@@ -167,12 +168,12 @@ and onion.<o:p></o:p></p>
 <p class="auto-style4" style="tab-stops: right 150.0pt 3.25in; mso-tab-count: 1;">
 Chicken, Beef, Pork or Shrimp</p>
 <p class="Item"><span class="auto-style9">Lemon Grass Stir-Fry</span><span class="auto-style7"> Δ</span></p>
-<p class="ItemDescription" style="color: #CDA551">Stir fried with lemon grass, pea pods, red bell 
+<p class="ItemDescription" style="color: black">Stir fried with lemon grass, pea pods, red bell 
 peppers, onions and mushrooms.<o:p></o:p></p>
 <p class="ItemL23Prices" style="color: #CDA551">Chicken, Beef or Shrimp</p>
 <p class="Item" style="color: #CDA551">Thai Stir-Fry
 Δ</p>
-<p class="ItemDescription" style="color: #CDA551">With mixed vegetables and Thai basil sauce.<o:p></o:p></p>
+<p class="ItemDescription" style="color: black">With mixed vegetables and Thai basil sauce.<o:p></o:p></p>
 <p class="ItemL23Prices" style="color: #CDA551">Chicken, Beef or Shrimp</p>
 <div class="WordSection1">
 	<p class="Item" style="color: #CDA551">Crispy Chicken with Thai Basil</p>
@@ -180,52 +181,52 @@ peppers, onions and mushrooms.<o:p></o:p></p>
 	<p class="Item" style="color: #CDA551"><o:p>Dragonfly Noodles</o:p></p>
 	<p class="ItemL23Prices" style="color: #CDA551">Chicken or Beef</p>
 	<p class="Item" style="color: #CDA551">Shoji Noodles<o:p></o:p></p>
-	<p class="ItemDescription" style="letter-spacing: -0.5pt; mso-bidi-font-size: 10.0pt; color: #CDA551;">
+	<p class="ItemDescription" style="letter-spacing: -0.5pt; mso-bidi-font-size: 10.0pt; color: black;">
 	Stir-fried 
 	rice noodles with broccoli, bean sprouts, onions and Thai basil.<o:p></o:p></p>
 	<p class="ItemL23Prices" style="color: #CDA551">Chicken, Beef or Shrimp</p>
 	<p class="Item" style="color: #CDA551">Chiang Mai Noodles
 	Δ</p>
-	<p class="ItemDescription" style="letter-spacing: -0.5pt; mso-bidi-font-size: 10.0pt; color: #CDA551;">
+	<p class="ItemDescription" style="letter-spacing: -0.5pt; mso-bidi-font-size: 10.0pt; color: black;">
 	Thai curry 
 	chicken, Thai basil and bamboo shoots with rice noodles.<o:p></o:p></p>
 	<p class="Item"><span class="auto-style9">Pad Se Ew
 	</span>
 	<span style="mso-tab-count: 1;" class="auto-style9">Δ&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</span><o:p></o:p></p>
-	<p class="ItemDescription" style="color: #CDA551">Spicy chow fun noodles with broccoli and bok 
+	<p class="ItemDescription" style="color: black">Spicy chow fun noodles with broccoli and bok 
 	choy.<o:p></o:p></p>
 	<p class="ItemL23Prices" style="color: #CDA551">Chicken, Beef or Shrimp</p>
 	<p class="Item" style="color: #CDA551">Pad Kee Mao
 	Δ</p>
-	<p class="ItemDescription" style="color: #CDA551">Sautéed vegetables with chow fun noodles, basil, 
+	<p class="ItemDescription" style="color: black">Sautéed vegetables with chow fun noodles, basil, 
 	Thai spices.<o:p></o:p></p>
 	<p class="ItemL23Prices" style="color: #CDA551">Chicken, Beef or Shrimp</p>
 	<p class="Item" style="color: #CDA551">Pad Lard Na<o:p></o:p></p>
-	<p class="ItemDescription" style="color: #CDA551">Chow fun noodles topped with onion, broccoli, bok 
+	<p class="ItemDescription" style="color: black">Chow fun noodles topped with onion, broccoli, bok 
 	choy, pea pods, stir-fried with brown sauce.<o:p></o:p></p>
 	<p class="ItemL23Prices" style="color: #CDA551">Chicken, Beef or Shrimp</p>
 	<p class="Item" style="color: #CDA551">Salmon with Basil-Ginger Sauce</p>
-	<p class="ItemDescription" style="color: #CDA551">Grilled salmon with a Thai basil and ginger 
+	<p class="ItemDescription" style="color: black">Grilled salmon with a Thai basil and ginger 
 	sauce. Served with steamed mixed vegetables. <o:p></o:p></p>
 	<p class="Item" style="color: #CDA551">Red Curry Salmon
 	Δ</p>
-	<p class="ItemDescription" style="color: #CDA551">Grilled salmon with Thai red curry sauce. Served 
+	<p class="ItemDescription" style="color: black">Grilled salmon with Thai red curry sauce. Served 
 	with steamed mixed vegetables.<o:p></o:p></p>
 	<p class="Item"><span style="letter-spacing: -1pt;" class="auto-style8">Thai Curry Salmon w/ 
 	Rice Noodles</span><span class="auto-style8">
 	Δ</span></p>
 	<p class="Item"><span class="auto-style9">Spicy Thai Seafood</span><span style="mso-spacerun: yes;" class="auto-style9">&nbsp;
 	Δ</span></p>
-	<p class="ItemDescription" style="color: #CDA551">White fish, shrimp and mussels stir-fried with 
+	<p class="ItemDescription" style="color: black">White fish, shrimp and mussels stir-fried with 
 	mushrooms, bamboo shoots, red bell peppers, onions and Thai basil.<o:p></o:p></p>
 	<p class="Item" style="color: #CDA551">Thai Fish Filet
 	Δ</p>
-	<p class="ItemDescription" style="color: #CDA551">Braised white fish with Thai basil, mushrooms, 
+	<p class="ItemDescription" style="color: black">Braised white fish with Thai basil, mushrooms, 
 	onions, red bell peppers and bamboo shoots.<o:p></o:p></p>
 	<p class="Item" style="color: #CDA551">Soft Shell Crab with Curry
 	Δ</p>
-	<p class="ItemDescription" style="color: #CDA551">Soft shell crab, Thai basil, bamboo shoots, 
+	<p class="ItemDescription" style="color: black">Soft shell crab, Thai basil, bamboo shoots, 
 	mushrooms, onions and red bell peppers stir-fried with yellow curry.</p>
 </div>
 
